Added extended media info in the TaskFile. Also renamed from 'file' to 'data' the TaskFile's field, so that it's not awkward to have file.file in the GET response.
